# src/app/schema.ts
@@ -343,6 +343,23 @@ export interface paths {
     patch?: never;
     trace?: never;
   };
+  "/uppercase": {
+    parameters: {
+      query?: never;
+      header?: never;
+      path?: never;
+      cookie?: never;
+    };
+    get?: never;
+    put?: never;
+    /** UpperCaseに変換します */
+    post: operations["convertToUppercase"];
+    delete?: never;
+    options?: never;
+    head?: never;
+    patch?: never;
+    trace?: never;
+  };
 }
 export type webhooks = Record<string, never>;
 export interface components {
@@ -413,6 +430,42 @@ export interface operations {
       };
       400: components["responses"]["ValidationError"];
       500: components["responses"]["InternalError"];
+    };
+  };
+  convertToUppercase: {
+    parameters: {
+      query?: never;
+      header?: never;
+      path?: never;
+      cookie?: never;
+    };
+    requestBody: {
+      content: {
+        "application/json": {
+          /**
+           * @description UpperCaseに変換する対象の文字列
+           * @example hello world
+           */
+          input: string;
+        };
+      };
+    };
+    responses: {
+      /** @description UpperCase成功時 */
+      200: {
+        headers: {
+          [name: string]: unknown;
+        };
+        content: {
+          "application/json": {
+            /**
+             * @description UpperCase変換後文字列
+             * @example HELLO WORLD
+             */
+            output?: string;
+          };
+        };
+      };
     };
   };
 }
